# pentomino

./: CLAUDE.md  Cargo.toml  TODO.md  flake.nix
.githooks/: pre-commit
docs/: proof-strategy.md  treewidth.md
lean/: TilingProblem.lean
results/: results.json
src/: display.rs  main.rs  pentomino.rs  placement.rs  solver.rs  triples.rs  wfc.rs
